fix: chat is working

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -2,6 +2,5 @@
 	"appId": "io.ionic.starter",
 	"appName": "gluten´t",
 	"webDir": "www",
-	"bundledWebRuntime": false,
-  "android":"/opt/android-studio-2022.1.1/android-studio/bin/studio.sh"
+	"bundledWebRuntime": false
 }
