--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
+    "firebase": "^9.19.1",
     "ionicons": "^6.0.3",
     "primeflex": "^3.3.0",
     "rxjs": "~7.5.0",
